fix menu and about page on mobile size

--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -4,18 +4,6 @@
 
 .container {
   padding: 20px $padding-horizontal;
-
-  @media (max-width: $desktop_xsm) {
-    padding: 20px $padding-horizontal-mobile;
-  }
-
-  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
-    padding: 20px $padding-horizontal-sm;
-  }
-
-  @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
-    padding: 20px $padding-horizontal-md;
-  }
 }
 
 .sobreNos {
@@ -37,26 +25,17 @@
     font-family: 'Josefin Sans', sans-serif;
     width: 50%;
   }
-
-  @media (max-width: $desktop_xsm) {
-    &__texto {
-      width: 100%;
-
-    }
-  }
-
 }
 
 .imagens {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: space-between;
   padding-bottom: 2rem;
+  justify-content: space-between;
 
   &__imagem {
-    width: 30rem;
-
+    width: 40rem;
     img {
       border-radius: 5px;
       width: 100%;
@@ -68,5 +47,31 @@
   color: $dark;
   font-size: 3rem;
   margin-bottom: 30px;
+}
 
+@media (max-width: $desktop_xsm) {
+  .container {
+    padding: 20px;
+  }
+
+  .sobreNos{
+    &__texto {
+      width: 100%;
+    }
+    &__img{
+      width: 100%;
+    }
+  }
+}
+
+@media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+  .container {
+    padding: 20px $padding-horizontal-sm;
+  }
+}
+
+@media (min-width: $desktop_sm) and (max-width: $desktop_md) {
+  .container {
+    padding: 20px $padding-horizontal-md;
+  }
 }
