--- a/src/pages/Menu/Items/Item/Item.module.scss
+++ b/src/pages/Menu/Items/Item/Item.module.scss
@@ -10,20 +10,20 @@
   padding: 2rem;
   transition: .2s ease-in;
   width: 90%;
+
   &:hover {
     background-color: $grey;
   }
 
   &__imagem {
     width: 20rem;
-    @media (max-width: $desktop_xsm) {
-      width: 100%;
-    }
+
     img {
       border-radius: 8px;
       width: 100%;
     }
   }
+
   &__descricao {
     display: flex;
     flex: 1;
@@ -31,18 +31,15 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 0 20px;
-    @media (max-width: $desktop_xsm) {
-      flex-direction: row;
-      margin-top: 20px;
-      padding: 0;
-    }
   }
+
   &__titulo {
     h2 {
       font-size: 2rem;
       font-weight: bold;
       margin-bottom: 20px;
     }
+
     p {
       color: $dark-grey;
       font-size: 1.3rem;
@@ -50,5 +47,24 @@
       max-width: 600px;
       margin-bottom: 20px;
     }
+  }
+}
+
+
+
+@media (max-width: $desktop_xsm) {
+  .item {
+    width: 100%;
+
+    &__descricao {
+      flex-direction: row;
+      margin-top: 20px;
+      padding: 0;
+    }
+
+    &__imagem {
+      width: 100%;
+    }
+
   }
 }
