--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -3,33 +3,64 @@
 
 .container {
   padding: 20px $padding-horizontal;
-  @media (max-width: $desktop_xsm) {
-    padding: 20px $padding-horizontal-mobile;
+}
+
+@media (max-width: $desktop_xsm) {
+  .cardapio {
+    width: 100%;
+
+    &__filtros {
+      padding: 0 20px;
+    }
   }
-  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+
+  .itemContainer {
+    justify-content: center;
+    padding: 20px 0;
+  }
+
+  .container {
+    padding: 20px 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .cardapio {
+    padding: 50px $padding-horizontal-mobile;
+  }
+}
+
+@media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+  .container {
     padding: 20px $padding-horizontal-sm;
   }
-  @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
-    padding: 20px $padding-horizontal-md;
+
+  .cardapio {
+    padding: 50px $padding-horizontal-sm;
+  }
+}
+
+@media (min-width: $desktop_sm) and (max-width: $desktop_md) {
+  .container {
+    padding: 20px $padding-horizontal-sm;
+  }
+
+  .cardapio {
+    padding: 50px $padding-horizontal-sm;
   }
 }
 
 .cardapio {
   padding: 50px $padding-horizontal;
-  @media (max-width: $desktop_xsm) {
-    padding: 50px $padding-horizontal-mobile;
-  }
-  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
-    padding: 50px $padding-horizontal-sm;
-  }
-  @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
-    padding: 50px $padding-horizontal-md;
-  }
+
   &__titulo {
     color: $dark;
     font-size: 3rem;
     margin-bottom: 30px;
   }
+
   &__filtros {
     align-items: center;
     display: flex;
@@ -40,7 +71,7 @@
   }
 }
 
-.titulo{
+.titulo {
   color: $dark;
   font-size: 3rem;
   margin-bottom: 30px;
